# rnbo.oscquery.runner

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTES.txt  README-rpi.md  README.md  boost.json  com.Cycling74.RNBORunner.yaml  com.Cycling74.RNBORunner2.yaml  conanfile.py  deploy.rb  deploy.sh  python3-conan.json  rnbo.service  rpi-profile  runner-mac.json  runner-rpi.json  runner.json
.github/workflows/: build-update.yml  build.yml
cmake/toolchains/: aarch64-unknown-linux-gcc11_4.cmake
common/: DBusService.h  IRnboUpdateService.h  RunnerUpdateState.cpp  RunnerUpdateState.h  conan.cmake  sdbus.cmake
conan/profiles/: aarch64-unknown-linux-gcc11_4
config/: RNBORunner.desktop  apt-cycling74-pubkey.asc  aptly.conf.json  bookworm-toolchain.cmake  com.Cycling74.RNBORunner.metainfo.xml  conan-rpi-default  conan-rpi-xcompile  cycling74.list  imager.json  repo.json  rnbo-update-service-bindings.xml  rnbo.service  rnbo.service.usr  rnbooscquery.service.local  rnbooscquery.service.usr  rpi-xpile-toolchain.cmake  runner.json
debian/: copyright  postinst  postrm  prerm
docker/: .dockerignore  .gitignore  Dockerfile  Dockerfile.bookworm  Dockerfile.bookworm64bit  README.md  build-rpi-bookworm64.sh  build-rpi-conan.sh  build-rpi.sh  build-update-rpi.sh  conan-rpi-bookworm64-xcompile-build  conan-rpi-bookworm64-xcompile-host  conan-rpi-xcompile  conan-rpi-xcompile-build  conan-rpi-xcompile-host
docker/cmake/toolchains/: aarch64-unknown-linux-gcc11_4.cmake  aarch64-unknown-linux-gcc12.cmake  armv7-unknown-linux-gnueabihf-gcc11_4.cmake  armv7-unknown-linux-gnueabihf-gcc12.cmake  armv7-unknown-linux-gnueabihf.cmake
docker/conan/profiles/: aarch64-unknown-linux-gcc11_4  aarch64-unknown-linux-gcc12  armv7-unknown-linux-gnueabihf  armv7-unknown-linux-gnueabihf-gcc11_4  armv7-unknown-linux-gnueabihf-gcc12  default
docker/scripts/: check-glibc.sh
docs/: .gitattributes  example-http.json  http-namespace-example.maxpat
runner/: CMakeLists.txt  rpi-profile  rpi-toolchain.cmake
runner/src/: Config.cpp  Config.h  Controller.cpp  Controller.h  Defines.h  EventHandler.cpp  EventHandler.h  Instance.cpp  Instance.h  InstanceAudio.h  JackAudio.cpp  JackAudio.h  PatcherFactory.cpp  PatcherFactory.h  ProcessAudio.h  Queue.h  ValueCallbackHelper.cpp  ValueCallbackHelper.h  main.cpp
scripts/: deploy.rb
so/: CMakeLists.txt  ConsoleLogger.cpp  rnbo-compile-so
src/: Config.cpp  Config.h  Controller.cpp  Controller.h  DB.cpp  DB.h  DataHandler.cpp  DataHandler.h  Defines.h  EventHandler.cpp  EventHandler.h  Instance.cpp  Instance.h  InstanceAudio.h  JackAudio.cpp  JackAudio.h  JackAudioRecord.cpp  JackAudioRecord.h  MIDIMap.cpp  MIDIMap.h  PatcherFactory.cpp  PatcherFactory.h  ProcessAudio.h  Queue.h  RnboUpdateServiceProxy.cpp  RnboUpdateServiceProxy.h  UpdateServiceProxyGlue.h  UpdateServiceServerGlue.h  Util.cpp  Util.h  ValueCallbackHelper.cpp  main.cpp
update/: CMakeLists.txt  NOTES.md  README.md  com.cycling74.rnbo.conf  com.cycling74.rnbo.xml  package.rb  rnbo-install  rnbo-system.conf  rnbo-update-service  rnbo.xml
update/config/: com.cycling74.rnbo.conf  com.cycling74.rnbo.xml  rnbo-update-service.service
update/debian/: copyright  postinst  postrm  prerm
update/src/: RnboUpdateService.cpp  RnboUpdateService.h  UpdateServiceServerGlue.h  Validation.cpp  Validation.h  main.cpp
update/test/: CMakeLists.txt  main.cpp
